--- a/.gitattributes
+++ b/.gitattributes
@@ -62,4 +62,5 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 
-TeslaExplorer/wwwroot/lib/* linguist-vendored
+* linguist-vendored
+*.cs linguist-vendored=false
